--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<title>Strike a Chord</title>
-</head>
-<body>Proposed Website for Strike a Chord
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-<p>Presented by: Donavan DuBose</p>
-<hr>
-
-<p>Mission: To provide world-class instruction with each music lesson.</p>
-
-<p>Target audience: People ages 3 to 65</p>
-
-<p>Linear website structure, pages to include: Home, Lessons, Instructions, Rentals, Contact</p>
-
-<p>Graphics: Images that showcase lesson opportunites</p>
-
-<p>Colors: BLue, black, white</p>
-
-<p>Accessibility: Use text alternatives where necessary</p>
-
-</body>
+   <head>
+      <meta charset="utf-8">
+      <title>Strike a Chord</title>
+   </head>
+   <body>
+      Proposed Website for Strike a Chord
+      <h1>This is a Heading</h1>
+      <p>This is a paragraph.</p>
+      <p>Presented by: Donavan DuBose</p>
+      <hr>
+      <p>Mission: To provide world-class instruction with each music lesson.</p>
+      <p>Target audience: People ages 3 to 65</p>
+      <p>Linear website structure, pages to include: Home, Lessons, Instructions, Rentals, Contact</p>
+      <p>Graphics: Images that showcase lesson opportunites</p>
+      <p>Colors: BLue, black, white</p>
+      <p>Accessibility: Use text alternatives where necessary</p>
+   </body>
 </html>
